# scrapper/internal/grpc-server/grpc-server.go
@@ -2,52 +2,91 @@ package grpcserver
 
 import (
 	"context"
-	"tbank/scrapper/internal/storage"
 	"tbank/scrapper/api/proto/gen"
+	"tbank/scrapper/internal/models"
 	"tbank/scrapper/internal/usecase"
 )
 
 type ScrapperServer struct {
 	gen.UnimplementedScrapperServer
 	usecase usecase.UseCase
-	storage storage.Storage
 }
 
-func NewScrapperServer(usecase usecase.UseCase, storage storage.Storage) *ScrapperServer {
+func NewScrapperServer(usecase usecase.UseCase) *ScrapperServer {
 	return &ScrapperServer{
 		usecase: usecase,
-		storage: storage,
 	}
 }
 
-func (s *ScrapperServer) RegisterChat(ctx context.Context, req *gen.RegisterChatRequest) (*gen.RegisterChatResponse, error) {
-	return &gen.RegisterChatResponse{Message: "Чат зарегистрирован"}, nil
+func (s *ScrapperServer) RegisterUser(ctx context.Context, req *gen.RegisterUserRequest) (*gen.RegisterUserResponse, error) {
+	if err := s.usecase.RegisterUser(ctx, uint(req.GetTgUserId()), req.GetName()); err != nil {
+		return nil, err
+	}
+	return &gen.RegisterUserResponse{
+		Message: "User Created",
+	}, nil
 }
 
-func (s *ScrapperServer) DeleteChat(ctx context.Context, req *gen.DeleteChatRequest) (*gen.DeleteChatResponse, error) {
-	return &gen.DeleteChatResponse{Message: "Чат удалён"}, nil
+func (s *ScrapperServer) DeleteUser(ctx context.Context, req *gen.DeleteUserRequest) (*gen.DeleteUserResponse, error) {
+	if err := s.usecase.DeleteUser(ctx, uint(req.GetTgUserId())); err != nil {
+		return nil, err
+	}
+
+	return &gen.DeleteUserResponse{
+		Message: "User Deleted",
+	}, nil
 }
 
 func (s *ScrapperServer) GetLinks(ctx context.Context, req *gen.GetLinksRequest) (*gen.ListLinksResponse, error) {
+	links, err := s.usecase.GetLinks(ctx, uint(req.GetTgUserId()))
+	if err != nil {
+		return nil, err
+	}
+
+	var linksResponse []*gen.LinkResponse
+
+	for _, link := range links {
+		linksResponse = append(linksResponse, &gen.LinkResponse{
+			Url: link.Url,
+			Id: int64(link.ID),
+		})
+	}
+
 	return &gen.ListLinksResponse{
-		Links: []*gen.LinkResponse{
-			{Id: 1, Url: "https://example.com", Tags: []string{"новости"}, Filters: []string{"акции"}},
-		},
-		Size: 1,
+		Links: linksResponse,
+		Size: int32(len(linksResponse)),
 	}, nil
 }
 
 func (s *ScrapperServer) AddLink(ctx context.Context, req *gen.AddLinkRequest) (*gen.LinkResponse, error) {
+
+	link := models.Link{
+		Url: req.GetUrl(),
+	}
+
+	newLink, err := s.usecase.AddLink(ctx, link, uint(req.GetTgUserId()))
+	if err != nil {
+		return nil, err
+	}
+
 	return &gen.LinkResponse{
-		Id:      123,
-		Url:     req.Link,
-		Tags:    req.Tags,
-		Filters: req.Filters,
+		Id: int64(newLink.ID),
+		Url: newLink.Url,
 	}, nil
 }
 
 func (s *ScrapperServer) RemoveLink(ctx context.Context, req *gen.RemoveLinkRequest) (*gen.LinkResponse, error) {
+	
+	link := models.Link{
+		Url: req.GetUrl(),
+	}
+
+	if err := s.usecase.RemoveLink(ctx, link, uint(req.GetTgUserId())); err != nil {
+		return nil, err
+	}
+
 	return &gen.LinkResponse{
-		Id: 1, Url: req.Link,
+		Id: int64(link.ID),
+		Url: link.Url,
 	}, nil
 }
